hoan thien bai kiem tra

--- a/src/component/content/Content.module.scss
+++ b/src/component/content/Content.module.scss
@@ -43,5 +43,26 @@
 .content-box{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  gap: 50px;
   padding-bottom: 182px;
+}
+
+@media (max-width: 992px) {
+  .content-wrapper{
+      padding: 0 10px;
+  }
+  .content-box{
+    grid-template-columns: 1fr 1fr;
+}
+}
+
+@media (max-width: 768px) {
+  .content-box{
+      grid-template-columns: 1fr;
+  }
+  .logo-box{
+      width: 50%;
+      margin: 0 auto 30px;
+  }
+ 
 }
